[tool.poetry]
name = "network-maker"
version = "0.1.0"
description = ""
authors = ["a-ok123 <alexey@pastel.network>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = ">=1.0.1"
pydantic-settings = "2.1.0"
pastel-gateway-sdk = ">=0.1.1"
urllib3 = ">=2.0.7"
diffusers = ">=0.25.1"
transformers = ">=4.37.0"
accelerate = ">=0.26.1"
zipp = ">=3.17.0"
huggingface-hub = ">=0.20.2"
llama_cpp_python = ">=0.2.33"
compel = ">=2.0.2"
asyncpg = ">=0.24.0"
aiosqlite = ">=0.17.0"
aiohttp = ">=3.9.3,<3.10.0"
jinja2 = ">=3.1.3,<3.2.0"
aiohttp-jinja2 = ">=1.6,<2.0"
torch = "^2.2.0"
torchvision = "^0.17.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
